cypress_output_2.txt
node:internal/modules/cjs/loader:1644
    throw err;
    ^

SyntaxError: /mnt/e/EdpsychConnect/node_modules/mime-db/db.json: Unexpected non-whitespace character after JSON at position 185884
    at parse (<anonymous>)
    at Module._extensions..json (node:internal/modules/cjs/loader:1641:39)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/mnt/e/EdpsychConnect/node_modules/mime-db/index.js:12:18)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/mnt/e/EdpsychConnect/node_modules/mime-types/index.js:15:10)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)

Node.js v20.19.5
